<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <View
            android:id="@+id/split_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="@color/colorBlack"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignBottom="@+id/split_line1"
            android:layout_alignParentTop="true">

            <edu.nyp.deafapp.Adapter.CustomViewPager
                android:id="@+id/line_chart_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/left_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/result_btn"
                android:src="@drawable/ic_arrow_left" />

            <ImageView
                android:id="@+id/right_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/result_btn"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/split_line1"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <View
                        android:id="@+id/split_line3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:background="@color/colorBlack"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/split_line3"
                        android:layout_alignParentTop="true">

                        <VideoView
                            android:id="@+id/tutorial_video"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/split_line3"
                        android:layout_alignParentBottom="true">

                        <TextView
                            android:id="@+id/tutorial_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:textColor="@color/colorBlack"
                            android:scrollbars = "vertical"/>

                        <Button
                            android:id="@+id/correct_demo_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/wrong_demo_button"
                            android:background="@color/colorTransparent"
                            style="?android:attr/borderlessButtonStyle"/>

                        <Button
                            android:id="@+id/wrong_demo_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorTransparent"
                            style="?android:attr/borderlessButtonStyle"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/camera_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <org.opencv.android.JavaCameraView
                            android:id="@+id/open_cv_camera"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/mouth_shape"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="40dp"
                           android:visibility="gone"/>

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/organ_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/organ_txt"
                            android:gravity="center"
                            android:layout_margin="5dp"
                            android:textStyle="bold"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <ImageView
                                android:id="@+id/organ_img"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:scaleType="fitCenter"
                                android:layout_centerInParent="true"/>

                            <ImageButton
                                android:id="@+id/organ_play"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_play"
                                android:background="@android:color/transparent"/>

                            <VideoView
                                android:id="@+id/organ_video"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:visibility="gone"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/tutorial_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/tutorial_btn"/>

                        <Button
                            android:id="@+id/exercise1_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/exercise1_btn"/>

                        <Button
                            android:id="@+id/exercise2_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/exercise2_btn"/>

                        <Button
                            android:id="@+id/start_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/start_btn"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/record_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <include
                android:id="@+id/include1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/custom_sound" />

        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/main_loading_progress"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>